--- a/iEstagios_Web/Projeto java/src/main/webapp/iEstagios/recuperarSenha.xhtml
+++ b/iEstagios_Web/Projeto java/src/main/webapp/iEstagios/recuperarSenha.xhtml
@@ -2,44 +2,44 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:pm="http://primefaces.org/mobile">
-
-    <f:view renderKitId="PRIMEFACES_MOBILE" />
+      xmlns:p="http://primefaces.org/ui">
 
     <h:head>
-        <style type="text/css">
-            .ui-grid-a div {
-                padding: 0em 0.5em;
-            }
-        </style>
+        <title>iEstagios</title>
+        <h:outputScript name="js/ripple.js" library="ultima-layout" />
+        <h:outputScript name="js/layout.js" library="ultima-layout" />
     </h:head>
+    
+    <h:body styleClass="login-body">
+        <h:form>
+            <p:growl id="growl" showDetail="true" sticky="true" />  
+            <div class="card login-panel ui-fluid">
+                <div class="ui-g">
+                    <div class="ui-g-12">
+                       <a href="/iEstagios/index.xhtml"><p:graphicImage name="images/logo-ultima.svg" library="ultima-layout" /></a>
+                    </div>
+                    <div class="ui-g-12">
+                        <h:panelGroup styleClass="md-inputfield">
+                            <p:inputText required="true" label="email" size="45"
+                                         requiredMessage="Por foavor, digite seu email"
+                                         validatorMessage="Email invalido"
+                                         value="#{mBeanConta.conta.login}">
+                                <f:validateRegex
+                                    pattern="^[_A-Za-z0-9-\+]+(\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\.[A-Za-z0-9]+)*(\.[A-Za-z]{2,})$" />
+                            </p:inputText>
+                            <label>Email</label>
+                        </h:panelGroup>
+                    </div>
+                    <div class="ui-g-12">
+                        <p:commandButton styleClass="green-btn" value="Recuperar Senha"  actionListener="#{mBeanConta.recuperarSenha}" update="growl"/>
+                    </div>
+                </div>
+            </div>
 
-    <h:body>
+            <div class="login-footer"><a href="/iEstagios/index.xhtml">iEstágios</a></div>
 
-
-
-
-        <pm:page id="index">
-            <pm:header title="iEstágios - Sistema de Gestão de Estágios" swatch="b">
-                <p:button outcome="/index" value="Início" icon="ui-icon-arrow-l" styleClass="ui-btn-left ui-btn-inline"/>
-            </pm:header>
-            <pm:content>
-                <h3 align='center'>Recuperar Senha</h3>
-
-                <p:panelGrid columns="1">               
-                    <h:form id="recoverform" class="form-vertical">
-                        <p align='center'>Digite seu email abaixo e enviaremos a você instuções para recuperar sua senha.</p>
-                        <p:inputText placeholder="Email"  value="#{mBeanAluno.aluno.email}"/> 
-                        <p:commandButton value="Recuperar" actionListener="#{mBeanAluno.recuperarSenha}"/>
-                    </h:form>
-                </p:panelGrid>
-            </pm:content>
-        </pm:page>
-
-
-
+            <h:outputStylesheet name="css/ripple.css" library="ultima-layout" />
+            <h:outputStylesheet name="css/layout-#{guestPreferences.theme}.css" library="ultima-layout" />
+        </h:form>
     </h:body>
-
-
 </html>
