--- a/iEstagios_Web/Projeto java/src/main/webapp/iEstagios/recuperarSenha.xhtml
+++ b/iEstagios_Web/Projeto java/src/main/webapp/iEstagios/recuperarSenha.xhtml
@@ -16,7 +16,7 @@
             <div class="card login-panel ui-fluid">
                 <div class="ui-g">
                     <div class="ui-g-12">
-                       <a href="/iEstagios/index.xhtml"><p:graphicImage name="images/logo-ultima.svg" library="ultima-layout" /></a>
+                       <a href="/index.xhtml"><p:graphicImage name="images/logo-ultima.svg" library="ultima-layout" /></a>
                     </div>
                     <div class="ui-g-12">
                         <h:panelGroup styleClass="md-inputfield">
